# cpp-projects

./: README.md  word.cpp
lab5/: CMakeLists.txt
laba1/: .gitignore  CMakeLists.txt  main.cpp  word.cpp  word.h
laba2/: README.md
laba2/lib/: CMakeLists.txt  number.h
laba2/tests/: CMakeLists.txt
laba2_min/: class_schedule.cpp
laba3/: CMakeLists.txt  README.md
laba3/lib/: BmpWriter.cpp  Sandpile.cpp
laba4/: README.md
laba4/lib/: ArgParser.cpp  ArgParser.h
laba5/: README.md
laba5/lib/: ArgParser.cpp  ArgParser.h
laba6/: README.md
laba6/example/: config.omfl
laba6/lib/: parser.cpp  parser.h
laba6/tests/: test_parser.cpp
laba8/: CMakeLists.txt  README.md
laba8/lib/: BST_containers.h
laba8/tests/: CMakeLists.txt  test_bst_containers.cpp
laba9/: README.md
